--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,23 @@
         android:layout_height="wrap_content"
         android:text="Your name..."
         android:textSize="30dp">
-        
+
 
     </TextView>
+
+    <Button
+        android:id="@+id/nextPG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="50dp"
+        android:backgroundTint="#333"
+        android:textSize="15dp"
+        android:padding="15dp"
+        android:onClick="goToNextPage"
+        android:text="Send to Next Page"
+        >
+    </Button>
 
     <EditText
         android:id="@+id/ed1"
@@ -38,8 +52,6 @@
         android:padding="15dp"
         android:onClick="changeName"
         android:text="submit"
-
-
         >
 
     </Button>
