--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,119 +7,37 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_dark">
+        android:text="Login"
+        android:background="#a8ddb5"
+        android:gravity="center"
+        android:textColor="#333"
+        android:padding="20dp"/>
 
-        <TextView
-            android:id="@+id/tv1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="15dp"
-            android:gravity="center"
-            android:text="Portrait"
-            android:textSize="20dp"/>
-    </LinearLayout>
-
-
-    <LinearLayout
+    <EditText
+        android:id="@+id/et1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:hint="Username"
+        android:layout_centerVertical="true"
+        android:padding="25dp"
+        android:inputType="text"/>
 
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/tv2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card1" />
-
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/tv3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card2" />
-
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/tv4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card3" />
-
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/tv5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card4" />
-
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom"
-            android:background="@android:color/holo_orange_dark">
-
-            <TextView
-                android:id="@+id/tv6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="Footer"
-                android:textSize="20dp"/>
-
-
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn1"
+        android:layout_below="@+id/et1"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="#666A86"
+        android:onClick="login"/>
 
 
 
 
-</LinearLayout>
+</RelativeLayout>
