--- a/app/src/main/res/layout/todo_line.xml
+++ b/app/src/main/res/layout/todo_line.xml
@@ -1,34 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="100dp"
     android:paddingStart="8dp"
     android:paddingEnd="8dp">
 
     <TextView
-        android:id="@+id/todoTitle"
+        android:id="@+id/todoPais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="placeholder title"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
-        android:id="@+id/todoDate"
+        android:id="@+id/todoCapital"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="placeholder date"
-        android:layout_below="@+id/todoTitle"
+        android:layout_below="@+id/todoPais"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="5dp"
-        android:textColor="#ccc"
-        android:textSize="12sp"/>
+        android:textSize="18sp"/>
 
     <TextView
-        android:id="@+id/todoNumber"
+        android:id="@+id/todonHabitantes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="placeholder Number"
+        android:layout_alignParentBottom="true"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/todoSomaDistritosFreguesias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="placeholder Number"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:textSize="18sp"
         android:textStyle="bold"/>
+
+
 
 </RelativeLayout>
