--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,125 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_dark">
-
-        <TextView
-            android:id="@+id/tv1"
-            android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="0dp"
+            android:onClick="getSingle"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="15dp"
-            android:gravity="center"
-            android:text="Portrait"
-            android:textSize="20dp"/>
+            android:layout_weight="1"
+            android:text="Get single">
+        </Button>
+        <Button
+            android:layout_width="0dp"
+            android:onClick="post"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="POST">
+        </Button>
     </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/tv2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card1" />
-
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/tv3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card2" />
-
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/tv4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card3" />
-
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/tv5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="card4" />
-
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom"
-            android:background="@android:color/holo_orange_dark">
-
-            <TextView
-                android:id="@+id/tv6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:padding="15dp"
-                android:gravity="center"
-                android:text="Footer"
-                android:textSize="20dp"/>
-
-
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
