--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -7,26 +8,26 @@
         android:id="@+id/name"
         style="@style/word_title"
         android:layout_marginTop="5dp"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:background="@android:color/holo_orange_light" />
 
     <TextView
+        android:id="@+id/email"
+        android:layout_marginBottom="5dp"
+        android:layout_below="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:background="@android:color/holo_orange_light"/>
+
+    <TextView
         android:id="@+id/age"
-        android:layout_width="100dp"
+        android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/name"
         android:background="@android:color/holo_orange_light" />
-
-    <TextView
-        android:id="@+id/estado"
-        android:layout_width="60dp"
-        android:layout_marginTop="5dp"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/age"
-        android:background="@android:color/holo_orange_light"
-         />
 </RelativeLayout>
